# VolchayFinder

./: CMakeLists.txt  build.bat  deploy.bat  rebuild_release.bat  run_app.bat  run_debug.bat  run_path.bat  run_release.bat
docs/architecture/: ui-stack-decision.md
docs/design/: design-tokens.md
docs/product/: ui-scope.md
src/MacDockShell/: AppBarController.cpp  AppBarController.h  AppIconProvider.cpp  AppIconProvider.h  DockDropTarget.cpp  DockDropTarget.h  DockModel.cpp  DockModel.h  HoverTracker.cpp  HoverTracker.h  MacCursor.cpp  MacCursor.h  PinnedTaskbarResolver.cpp  PinnedTaskbarResolver.h  TaskbarController.cpp  TaskbarController.h  WindowEffects.cpp  WindowEffects.h  main.cpp
src/MacDockShell/fonts/: README.txt
src/MacDockShell/qml/: ControlWindow.qml  DockWindow.qml  Main.qml  TopBarWindow.qml
src/MacDockShell/qml/components/: ControlCenterPanel.qml  Dock.qml  DockItem.qml  MacToggle.qml  MenuBarHit.qml  StatusArea.qml  TopBar.qml  qmldir
